--- a/.github/workflows/build-x86-64-24.10.1.yml
+++ b/.github/workflows/build-x86-64-24.10.1.yml
@@ -98,7 +98,7 @@ jobs:
           tag_name: Autobuild-x86-64
           body_path: ${{ github.workspace }}/info.md
           files: |
-            ${{ github.workspace }}/*squashfs-combined-efi.img.gz
+            ${{ github.workspace }}/immortalwrt-23.05.4-x86-64-generic-squashfs-combined-efi.img.gz
             ${{ github.workspace }}/immortalwrt-23.05.4-x86-64-generic-squashfs-combined-efi.img.gz.sha256
           token: ${{ secrets.GITHUB_TOKEN }}
         env:
